# lana-bank

./: .gitignore  Cargo.toml  Makefile  README.md  changes.patch  cog.toml  deny.toml  docker-compose.yml  flake.nix  package.json  pnpm-lock.yaml  typos.toml
.cursor/rules/: rust-base.mdc
.github/: dependabot.yml
.github/workflows/: bats.yml  cache-update.yml  check-code-apps.yml  check-code.yml  cocogitto.yml  codeql.yml  cypress.yml  data-pipeline.yml  flake-check.yml  nextest.yml  pnpm-audit.yml  rust-integration.yml  simulations.yml  sqlfluff.yml  sqlx-prepare.yml  storybook.yml
.sqlx/: query-001cc38ee83a10440ad1a6edef5ab9b759e0ce3fd66bca3457e853ca39078aa4.json  query-01ad55ad3b54da64e8a7f1efd48cd62427a1d749d0da83c23c12b2a1c2de68f0.json  query-01fafa258fe6c8342d727687b5ce9a07ac2b01bf13671b8d6fe64561b3a75571.json  query-02c0ff0a24e1e6b69ab09bca40dabbdf70c7bdb9e0c518634909612fece54f30.json  query-03372872b66835f8cb57e341b251c7ffbfd025e6b04d258a1f6545d4a7999dcc.json  query-036a594f444baea05f66a74e35c68f23103a848e5d0bf02c104e36af54271578.json  query-03a686ebdfa97e9e8017a45a137a82db170eeb2ca7bd4d87cc46091f765466be.json  query-0443ac6834b42e79528ac24b95bc3286eeae2d357a3df107878f47ba610c9fd4.json  query-05422333effd32389683fe2af3e52f0fe0d86747c6dc25b01ad2b078fd195e9b.json  query-05801242acd394c55df71cb3531333f061c8a01dbf90b7f3088e96959ba1e82e.json  query-073f7263bd4862ba55563ff998c133e8ce2397ddda1cb45282462640a32f849f.json  query-085d7fc598fe026917c1bb699bc25841d05747b1cbe03b7c944b3b0d714cc56a.json  query-08cbe4b24f5b10c83d4c1f960f61f13cd4eccb6d599e65edfada2e72742448db.json  query-08e21d1affff5cb153c6dced4ae2d04eba91ba612f1c4cd5885d8a0050fadb73.json  query-090fc6dc32ecc22f902d77df51964fe6be23651e5dada5f3d884e15593a108c4.json  query-092adb172215a8b534ca310121e63ae8172dd739b2a33189d5d22d554247438a.json  query-0940aa5ad8a43a09823d0026e07cbb6f1588441327de02e9d0ca893e8fed72c3.json  query-0a2835741f6104a392dfc5553e97ec7bf79eddbc117a14c42e2a67e93445cb84.json  query-0ac7f67d39cc6e29672dae4003df89be654b0e09b04e2ce29129576fbc2aceb4.json  query-0b18dbcd4cacd2dafb038ddac1b70be5cddde29e96f25039b113b0ef68d20838.json  query-0b1a889446e819f805335201defb94e5e9b6af434c66504f5be8d23fc08fae3b.json  query-0b929dd09cc1eed36c90119fa3557439e2e5a95bc3c3de29d915b10879517138.json  query-0bab790a32c034d8405ccfe3cf0e9be30822d6fe715549a6bfaf49dd0079ade2.json  query-0d77f0768fbdbb5b064d04b8ff0cab2d6962edc12994dae06e6c0b1d1f2024f0.json  query-0db8d4d6303d7d9d63c743439e5b2860e09f48fb559a28570ba80adfd8143237.json  query-0edda7664b95e3a0ebeab4a73bf059cba83ae204f8676e9e382196e94e3330bb.json  query-0fd19834577844bd8eb0c1f0e9b2c763b34b8d2f42b3a95cf8d493907f02a4d0.json  query-11017ba967cfde522c566504c849e7675a4ce20ccc45a80483fedf15cf899c5e.json  query-1166c0ad973ebe4ad07b2eb1f9b1cab5af3b44b20debec809f15158d45191c5d.json  query-119f7fdd3d99e17d79915fbb8d82995da2f67b7ca7bb8734aa37a60ba04872c3.json  query-12161b7b4038c832448e6640430a7962b1400063b9f0db8017a6e1ead9d9f781.json  query-13ba1f6c4c72e2e16efa5605d754bd9f2931c89c5a0bfb45f27c235d31db8f44.json  query-15511052d5a3a96b27550566331200fa655d8376f118808d5a149094e5fb1e89.json  query-157d8cba1075b4b793c94cabb3900c59ca8199d4e229f2c8ee8c4cf0e9f9e8e7.json  query-15ba79fd7709d62a772e6b3305e38e5ed6b9c6aa3451227d739c9041c238e055.json  query-160cebc3b6e6c19298c7e2023403ee5b5a5abf763ae7c02885b542f137d6ab70.json  query-18c97dcccd136404becb5fdb33086255acf99efcef3e81c547e2502dff06944a.json  query-190703f3c212edf490b731ce335c58294ed44f698c3ba27a30896e0351f77f6d.json  query-19ce73c6f015e29a8034328e596a234a42a198ef9083e77fe5976108f709f38e.json  query-1a706738dab1a73850635b13b671edefe168b9e704daff5c0118104b2c43237d.json  (+487 more)
apps/admin-panel/: README.md  cypress.config.ts  package.json  tsconfig.json
apps/customer-portal/: package.json
apps/shared-web/: package.json
bats/: accounting-csv-export.bats  accounting.bats  credit-facility-custody.bats  credit-facility-proposal.bats  credit-facility.bats  csv-export.bats  custody.bats  customer.bats  dashboard.bats  helpers.bash  lana-normal.yml  lana.yml  terms_template.bats
bats/admin-gql/: chart-of-accounts-closing.gql  chart-of-accounts.gql  credit-facility-proposal-create.gql  (+7 more)
ci/: flake.nix  pipeline.yml
dagster/: Dockerfile
dev/: lana.default.yml  otel-agent-config.yaml
dev/entity-rollups/: Cargo.toml
dev/entity-rollups/schemas/: chart_event_schema.json  chart_node_event_schema.json  collateral_event_schema.json  credit_facility_event_schema.json  credit_facility_proposal_event_schema.json  deposit_account_event_schema.json  deposit_event_schema.json  disbursal_event_schema.json  interest_accrual_cycle_event_schema.json  obligation_event_schema.json  payment_allocation_event_schema.json  pending_credit_facility_schema.json  terms_template_event_schema.json  withdrawal_event_schema.json
dev/entity-rollups/src/: lib.rs
dev/entity-rollups/src/update_schemas/: mod.rs
lana/customer-sync/: Cargo.toml
lana/customer-sync/src/: config.rs  lib.rs
lana/customer-sync/src/job/: active_sync.rs  create_deposit_account.rs  create_keycloak_user.rs  mod.rs  sync_email.rs  update_customer_activity_status.rs  update_last_activity_date.rs
lana/deposit-sync/: Cargo.toml
lana/deposit-sync/src/: lib.rs
lana/deposit-sync/src/job/: sumsub_export.rs
lana/notification/: Cargo.toml
lana/notification/src/: config.rs  lib.rs
lana/notification/src/email/: config.rs  error.rs  mod.rs
lana/notification/src/email/job/: event_listener.rs  sender.rs
lana/notification/src/email/templates/: mod.rs
lana/notification/src/email/templates/views/: account_created.hbs  role_created.hbs
lib/airflow/: Cargo.toml
lib/airflow/src/: config.rs
lib/cloud-storage/: Cargo.toml
lib/cloud-storage/src/: config.rs
lib/cloud-storage/src/client/: gcp.rs  local.rs
lib/jwks-utils/: Cargo.toml
lib/jwks-utils/src/: lib.rs
meltano/: meltano.yml
meltano/utilities/generate-es-reports/: pyproject.toml
meltano/utilities/generate-es-reports/generate_es_reports/: reports.yml
nix/: meltano.nix  podman-runner.nix
workspace-hack/: Cargo.toml
(+499 files in other folders)
