[package]
name = "customer-sync"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]
fail-on-warnings = []

[dependencies]

core-customer = { workspace = true }
core-deposit = { workspace = true }
governance = { workspace = true }

outbox = { workspace = true }
job = { workspace = true }
audit = { workspace = true }
authz = { workspace = true }

tracing = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
keycloak-client = { workspace = true }
chrono = { workspace = true }
sim-time = { workspace = true, optional = true }
lana-events = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
