[package]
name = "deposit-sync"
version = "0.3.762-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]
fail-on-warnings = []

[dependencies]

core-deposit = { workspace = true }
core-customer = { workspace = true }
core-money = { workspace = true }
governance = { workspace = true }

sumsub = { workspace = true }
outbox = { workspace = true }
job = { workspace = true }
audit = { workspace = true }
authz = { workspace = true }

lana-events = { workspace = true }

tracing = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true } 
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
