[package]
name = "airflow"
description = "Connects to the Airflow API to talk to custom plugins defined in meltano/orchestration/airflow/plugins"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]

fail-on-warnings = []

[dependencies]

thiserror = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[package.metadata.cargo-machete]
ignored = ["url"]
