[package]
name = "cloud-storage"

license = "FSL-1.1-ALv2"
edition = "2024"

[features]
fail-on-warnings = []

[dependencies]
google-cloud-storage = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tempfile = { workspace = true }
