[package]
name = "jwks-utils"

license = "FSL-1.1-ALv2"
edition = "2024"

[features]

fail-on-warnings = []

[dependencies]

axum = { workspace = true }
axum-extra = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
