[tool.poetry]
name = "generate-es-reports"
version = "0.0.1"
description = "generate-es-reports"
readme = "README.md"
authors = ["Galoy <biz@galoy.io>"]
include = ["generate_es_reports/schemas/*/*.xsd"]

[tool.poetry.dependencies]
python = "^3.11"
singer-sdk = { version="~=0.48.1", extras = [] }
requests = "~=2.32.4"
google-cloud-bigquery = "^3.17.2"
google-cloud-storage = "^2.16.0"
google-auth = "^2.29.0"
google-auth-oauthlib = "^1.2.0"
xmlschema = "^3.1.1"
rsa = ">=4.7,<5" # keep <5 to satisfy google-auth’s upper bound
setuptools = ">=78.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-es-reports = "generate_es_reports.cli:cli"
